# padawan-iot-rework

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
padawan_iot/: main.py
padawan_iot/initialize_pi/: initialize.py
padawan_iot/oled/: mini_oled.py  requirements.txt
padawan_iot/sensors/temperature/: temperature_sensor.py
padawan_iot/sensors/water_level/: water_level_sensor.py
padawan_iot/water_pump/: water_pump.py
padawan_iot/web_server/: app.py  app_copy.py  app_wip.py
padawan_iot/web_server/oled/: mini_oled.py
padawan_iot/web_server/sensors/water_level/: water_level_sensor.py
padawan_iot/web_server/static/css/: site.css
padawan_iot/web_server/static/js/: datacharts.js  enable-tooltips.js  favicon.js  metricshistory.js
padawan_iot/web_server/templates/: home.html  layout.html  login.html  shutdown.html
tests/: app_test.py  display_stats_test.py  leds_test.py  temp_test.py  water_level_test.py  water_pump_test.py
web_server/: app.py
web_server/initialize_pi/: initialize.py
web_server/oled/: mini_oled.py
web_server/sensors/temperature/: temperature_sensor.py
web_server/sensors/water_level/: water_level_sensor.py
web_server/static/css/: site.css
web_server/static/js/: copyrightdate.js  currenttime.js  inputmask.js  moment-2.29.2.min.js
web_server/templates/: home.html  layout.html  logs.html  metrics.html  shutdown.html
