[tool.poetry]
name = "padawan-iot"
version = "0.1.0"
description = "IoT Water Level Monitoring System"
authors = ["ashfletch <ashley.fletcher@inmarsat.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
